# QTest-Example

./: CMakeLists.txt  main.cpp  suite.cpp  suite.h
tests/: test.cpp  test.h  testGUI.cpp  testGUI.h
